Non-unified build fixes, early September 2021 edition https://bugs.webkit.org/show_bug.cgi?id=229983

Unreviewed non-unified build fixes.


Source/JavaScriptCore:

* runtime/TemporalTimeZone.cpp: Add missing JSObjectInlines.h header.

Source/WebCore:

* rendering/ReferencedSVGResources.cpp: Add missing wtf/IsoMallocInlines.h header.
* rendering/ReferencedSVGResources.h: Add missing wtf/IsoMalloc.h and wtf/text/AtomString.h
headers, and missing forward declarations for the Document and RenderElement classes.
* rendering/RenderView.cpp:
(WebCore::RenderView::shouldPaintBaseBackground const): Add missing HTMLNames:: namespace
prefix to usage of HTMLNames::frameTag member.
* rendering/TextPainter.cpp: Add missing LayoutIntegrationInlineContent.h header.
* workers/Worker.h: Add missing wtf/Deque.h header.
* workers/service/ServiceWorkerRegistrationData.cpp: Add missing wtf/CrossThreadCopier.h
header.

Source/WebKit:

* NetworkProcess/PrivateClickMeasurement/PrivateClickMeasurementClient.h: Add missing
WebCore/PrivateClickMeasurement.h header.
* NetworkProcess/PrivateClickMeasurement/PrivateClickMeasurementClientImpl.cpp:
(WebKit::PCM::ClientImpl::loadFromNetwork): Sprinkle missing WebCore:: namespace prefixes.
* NetworkProcess/PrivateClickMeasurement/PrivateClickMeasurementClientImpl.h: Add missing
wtf/WeakPtr.h header.
* NetworkProcess/PrivateClickMeasurement/PrivateClickMeasurementNetworkLoader.cpp: Add
missing WebCore/RuntimeApplicationChecks.h header.


Canonical link: https://commits.webkit.org/241380@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282080 268f45cc-cd09-0410-ab3c-d52691b4dbfc