Source/WebKit/NetworkProcess/PrivateClickMeasurement/PrivateClickMeasurementClientImpl.cpp
@@ -40,7 +40,7 @@ ClientImpl::ClientImpl(NetworkSession& session, NetworkProcess& networkProcess)
 void ClientImpl::loadFromNetwork(URL&& url, RefPtr<JSON::Object>&& jsonPayload, WebCore::PrivateClickMeasurement::PcmDataCarried pcmDataCarried, NetworkLoadCallback&& completionHandler)
 {
     if (!featureEnabled())
-        return completionHandler(ResourceError(ResourceError::Type::Cancellation), { }, { });
+        return completionHandler(WebCore::ResourceError(WebCore::ResourceError::Type::Cancellation), { }, { });
 
     PrivateClickMeasurementNetworkLoader::start(*m_networkSession, WTFMove(url), WTFMove(jsonPayload), pcmDataCarried, WTFMove(completionHandler));
 }
